# boilerstrip

./: .gitignore  Cargo.toml  README.md  codecov.yml  patch.diff  patch2.diff  patch3.diff  scratch_test.rs
.github/: labeler.yml
.github/workflows/: actionlint.yml  ci.yml  dependabot-pr-automerge.yml  labeler.yml  release.yml
.jules/: bolt.md  sentinel.md
crate/: Cargo.toml  README.md
crate/benches/: convert.rs  learn.rs
crate/src/: lib.rs  util.rs
crate/src/convert/: filter.rs  markdown.rs  mod.rs  parser.rs  selector.rs  strip.rs  types.rs
crate/src/learn/: apply.rs  constants.rs  dom.rs  dom.rs.orig  fingerprint.rs  mod.rs  selectors.rs  snippets.rs  types.rs
crate/tests/: convert_integration.rs  convert_null_removals.rs  discover_fixtures.rs  end_to_end.rs  learn_integration.rs  test_panic.rs
fixtures/: README.md
fixtures/convert/: basic_article.expected.md  basic_article.html  tables_and_lists.html  with_meta.expected.json  with_meta.html
fixtures/end_to_end/pages/: page1.html  page2.html  page3.html
fixtures/learn/site_a/: expected.json  page1.html  page2.html  page3.html
fixtures/learn/site_b/: expected.json  page1.html  page2.html
package/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
package/__tests__/: boilerstrip.test.ts  convert_null_removals.test.ts
package/src/: lib.rs
