[package]
name = "boilerstrip"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Learn site boilerplate selectors from multiple pages and convert HTML to clean Markdown"
repository = "https://github.com/jonathanong/boilerstrip"
keywords = ["html", "markdown", "scraping", "rag", "boilerplate"]
categories = ["text-processing", "web-programming"]

[features]
default = []
internals = []

[dependencies]
ego-tree = "0.11"
scraper = "0.27"
lol_html = "3.0"
rayon = "1.12"
regex = "1.11"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1"
serde_json = "1.0"

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "learn"
harness = false
