[package]
name = "boilerstrip-node"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
boilerstrip = { path = "../crate" }
napi = { version = "3", features = ["napi4", "serde-json"] }
napi-derive = "3"
rayon = "1.12"
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
